- **BsListTile**: fixed bug of `<BsListTileSubtitle>` text overlap with `<BsListTileAction>` when `multiline` is on and is in ripple animation state. - Update CHANGELOG.md

--- a/src/components/ListView/listTile.scss
+++ b/src/components/ListView/listTile.scss
@@ -99,7 +99,7 @@
         padding: var(--#{$prefix}tile-padding-y) var(--#{$prefix}tile-padding-x);
         position: relative;
 
-        > div[class^="#{$prefix}list-tile-"] {
+        > div > div[class^="#{$prefix}list-tile-"] {
             &:nth-child(2),
             &:last-child:not(:first-child) {
                 margin-left: var(--#{$prefix}tile-padding-x);
